# VOLCANOR

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  casefile.txt  casefile1.txt  classdef.f90  config.in  createDocs.sh  ford_input.md  getCL.m  getCT.m  gridconfig.in  gridgen.f90  index.html  init_file.f90  inputfile  libC81.f90  libCommon.f90  libMain.f90  libMath.f90  libPostprocess.f90  library.f90  main.f90  mymathlib.f90  newcase.sh  plotDrag.py  plotit.py  postproc.f90  quick_commit.sh  reference  rot_matrices.m  rotor01.in  rotor01.in_fixedwing  rotor02.in  rotor03.in  rotor04.in  (+46 more)
PROWIM/: CLARK-Y.C81  NACA64015.C81  NACA64015_1.C81  NACA64015_2.C81  config.in  rotor01.in  rotor01.in_doubleSpan  rotor02.in
Results/: visitlog.py
Results_AB2/: wingNwake00001.plt  wingNwake00002.plt  wingNwake00003.plt  wingNwake00004.plt  wingNwake00005.plt  wingNwake00006.plt  wingNwake00007.plt  wingNwake00008.plt  wingNwake00009.plt  wingNwake00010.plt  wingNwake00011.plt  wingNwake00012.plt  wingNwake00013.plt  wingNwake00014.plt  wingNwake00015.plt  wingNwake00016.plt  wingNwake00017.plt  wingNwake00018.plt  wingNwake00019.plt  wingNwake00020.plt  wingNwake00021.plt  wingNwake00022.plt  wingNwake00023.plt  wingNwake00024.plt  wingNwake00025.plt  wingNwake00026.plt  wingNwake00027.plt  wingNwake00028.plt  wingNwake00029.plt  wingNwake00030.plt  wingNwake00031.plt  wingNwake00032.plt  wingNwake00033.plt  wingNwake00034.plt  wingNwake00035.plt  wingNwake00036.plt  wingNwake00037.plt  wingNwake00038.plt  wingNwake00039.plt  wingNwake00040.plt  (+15 more)
airfoils/: NACA0012.C81  flatPlate.C81
autorotation/: plotwomega.py
build_roofline/: blade_classdef.mod  fwake_classdef.mod  libc81.mod  libcommon.mod  libmath.mod  libpostprocess.mod  nwake_classdef.mod  rotor_classdef.mod  vf_classdef.mod  vr_classdef.mod  wingpanel_classdef.mod
caradonna.case/: Results  config.in  felsRotor.py  geom01.in  rotor01.in
carpnfrido.case/: config.in  geom01.in  plotResponse.py
case01/: Makefile  config.in  rotor01.in  wingNwake00015.plt
case01.case/: config.in  geom01.in  rect_DegenGeom.xyz  rotor01.in
caseProf/: config.in
checkAIC.case/: Makefile  config.in  geom01.in
climbDynamics1.case/: ConQuadProp.xyz  config.in  geom01.in  geom02.in  geom03.in  geom06.in
climbDynamics2.case/: geom02.in  geom04.in  geom05.in  geom07.in  geom08.in
climbDynamics2Long.case/: config.in  geom01.in  geom02.in  geom03.in  geom04.in
climbDynamics4.case/: config.in  geom01.in  geom02.in  geom03.in  geom04.in  geom05.in  geom06.in  geom07.in  geom08.in
climbDynamics4Long.case/: geom02.in
coax.case/: config.in  geom01.in  geom02.in
coaxial.case/: coaxIdent.xyz  coaxIdentRev.xyz  config.in  geom01.in  geom02.in
coaxialExp/: NACA5605Ram.C81
docs/: MANUAL.md  NOTES.md  README.md  assumptions.txt  index.html  search.html  todo
elevate.case/: config.in  geom01.in  getForceDist.py  rotor01.in
flap.case/: config.in  geom01.in
ford_input/: index.md
geometry/: AR06swept00_15x26.xyz  AR06swept25_15x26.xyz  AR06swept45_15x26.xyz  AR06sweptH25_15x26.xyz  AR06sweptH45_15x26.xyz  NACA23012.xyz  NACA23012AR06.vsp3  NACA23012AR06.xyz  NACA6409.xyz  PROP2.xyz  PurdueProp.xyz  TN1422.xyz  TN1422_wash.xyz  TR-1208_32x10.xyz  TR-1208_46x01.xyz  TR1208.xyz  X-57_Wing.xyz  halfWing.xyz  rotor01.xyz  swept00_15x26.xyz  swept05_15x26.xyz  swept15_15x26.xyz  swept25_15x26.xyz  swept35_15x26.xyz  swept45_15x26.xyz  sweptWing.xyz  sweptWingRef.xyz  tandemCanard.xyz  test00.xyz  test05.xyz  test15.xyz  test25.xyz  test35.xyz  test45.xyz
groundTest.case/: Makefile  config.in  geom01.in  geom02.in  gridgen  tools  volcanor
groundTestFixed.case/: config.in  geom01.in  geom02.in  plot_wake.py
heaving.case/: config.nml  geom01.nml  geom02.nml  gettraj.py  trajectory01.in
heliMars.case/: config.in  geom01.in  rotor01.in
interface/: lsq2.html
knight2IGE.case/: NACA0015.C81
knight2OGE.case/: NACA0015-R4239.C81  NACA0015.C81  config.in  geom01.in
light/: config.in  geom01.in  light.xyz  rotor01.in
light.case/: Makefile  config.in  felsRotor.py  geom01.in  plotit.py
lightIGE.case/: Makefile  config.in  geom02.in
lightOGE.case/: geom01.in  light.m
lists/: files.html  modules.html  namelists.html  procedures.html  programs.html  types.html
mars.case/: bemt_climb.txt  check.py  compareBEMT.py  config.in  felsRotor.py  geom01.in  mars.m  mars.xyz  marsFlat.m  marsFlat.xyz  rotor01.in  vlm_climb.txt
mars.case_2000_0deg/: rotor01.in
mars.case_2000_3deg/: rotor01.in
mars.case_2000_6deg/: felsRotor.py  rotor01.in
mars.case_3000_0deg/: felsRotor.py  mars.m  mars.xyz  marsFlat.xyz  plotit.py  rotor01.in
mars.case_3000_3deg/: config.in  felsRotor.py  mars_notwist.m  rotor01.in
mars.case_3000_6deg/: config.in  felsRotor.py  mars.m  mars.xyz  mars_notwist.xyz  rotor01.in
marsImbalanced.case/: felsRotor.py  (+1 more)
tests/: CMakeLists.txt  aic_test.f90  aic_testrunner.f90  libMath_test.f90  libMath_testrunner.f90  naturalfruit.f90  panel1x2_test.f90  panel1x2_testrunner.f90  panel1x3NegPitch_test.f90  panel1x3_test.f90  panel1x3_testrunner.f90  panel2_test.f90  panel2_testrunner  panel2_testrunner.f90  panel3_test.f90  rotor1x2NegPitch_test.f90  rotor1x2NegPitch_testrunner.f90  rotor1x2Rev_test.f90  rotor1x2Rev_testrunner.f90  rotor1x2_test.f90  rotor1x2_testrunner.f90  test_elevate.py  test_katzNplotkin-AR04.py  test_katzNplotkinAR04.py  vf_test.f90  vf_testdriver.f90  wing1x2_test.f90  wing1x2_testrunner.f90  wing1x3NegPitch_test.f90  wing1x3NegPitch_testrunner.f90  wing1x3_test.f90  wing1x3_testrunner.f90
tests/elevateTest.case/: bin  config.in  config.nml  details.txt  geom01.in  geom01.nml
tests/elevateTest.case/referenceResults/: r01ForceDim.csv.ref  r01ForceNonDim.csv.ref  r01Params.json.ref  r01b01ForceDist00001.csv.ref  r01b01ForceDist00150.csv.ref  r01b01ForceDist00300.csv.ref
tests/katzNplotkin-AR04.case/: config.in  config.nml  geom01.in  geom01.nml
tests/katzNplotkin-AR04.case/referenceResults/: r01ForceNonDim.csv.ref  r01Params.json.ref  r01b01ForceDist00160.csv.ref
(+2045 files in other folders)
